crates/analyzer/tests/snapshots/errors__bad_ingot.snap
---
source: crates/analyzer/tests/errors.rs
expression: error_string_ingot(&path)

---
error: import name conflicts with the ingot named "std"
  ┌─ compile_errors/bad_ingot/src/bing.fe:1:5
  │
1 │ use std
  │     ^^^ `std` is already defined

error: cannot glob import from type
  ┌─ compile_errors/bad_ingot/src/foo.fe:1:18
  │
1 │ use ingot::bing::Bong::*
  │                  ^^^^ prefix item must be a module

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/foo.fe:2:18
  │
2 │ use ingot::bing::Tong
  │                  ^^^^ not found

error: import name conflicts with the ingot named "std"
  ┌─ compile_errors/bad_ingot/src/foo.fe:3:20
  │
3 │ use ingot::bing as std
  │                    ^^^ `std` is already defined

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:1:5
  │
1 │ use bar::Baz
  │     ^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:2:33
  │
2 │ use biz::bad::{Bur, Bud as Bar, Boo}
  │                                 ^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:3:10
  │
3 │ use biz::Bark
  │          ^^^^ not found

error: unresolved path item
  ┌─ compile_errors/bad_ingot/src/main.fe:4:5
  │
4 │ use none::*
  │     ^^^^ not found

error: a type with the same name has already been imported
  ┌─ compile_errors/bad_ingot/src/main.fe:2:28
  │
2 │ use biz::bad::{Bur, Bud as Bar, Boo}
  │                            ^^^ `Bar` first defined here
  ·
6 │ contract Bar:
  │          --- `Bar` redefined here

error: function name conflicts with the ingot named "std"
   ┌─ compile_errors/bad_ingot/src/main.fe:11:4
   │
11 │ fn std():
   │    ^^^ `std` is already defined

error: incorrect type for `Foo` argument `my_num`
  ┌─ compile_errors/bad_ingot/src/main.fe:9:33
  │
9 │         return foo::Foo(my_num: true)
  │                                 ^^^^ this has type `bool`; expected type `u256`


